# nn.rs

./: Cargo.toml  README.md
gui/: Cargo.toml
gui/src/: main.rs  visualization.rs
neural-network/examples/: iris.rs  mnist_digits.rs  xor.rs
neural-network/src/: cost.rs  data_loader.rs  lib.rs  linear.rs  main.rs  network.rs  tensor.rs
neural-network/src/data_loading/: data_loader.rs  dataset.rs  mod.rs
neural-network/src/data_loading/datasets/: iris.rs  mnist_digits.rs  mod.rs
src/: cost.rs  lib.rs  linear.rs  main.rs  network.rs  tensor.rs
